--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "rebuild": "electron-rebuild -f -w node-pty"
   },
   "main": "background.js",
   "dependencies": {
+    "node-pty": "^0.8.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^8.1.0"
+    "vue-property-decorator": "^8.1.0",
+    "vue": "^2.6.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-typescript": "^3.5.0",
     "@vue/cli-service": "^3.5.3",
+    "electron-rebuild": "^1.8.4",
     "electron": "^4.1.3",
     "typescript": "^3.4.2",
     "vue-cli-plugin-electron-builder": "^1.1.3",
-    "vue-template-compiler": "^2.5.21"
+    "vue-property-decorator": "^7.0.0",
+    "vue-template-compiler": "^2.5.21",
+    "xterm": "^3.12.0"
   }
 }
