--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "main": "background.js",
   "dependencies": {
-    "node-pty": "^0.8.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-class-component": "^6.0.0",
@@ -29,7 +28,6 @@
     "typescript": "^3.4.2",
     "vue-cli-plugin-electron-builder": "^1.1.3",
     "vue-property-decorator": "^7.0.0",
-    "vue-template-compiler": "^2.5.21",
-    "xterm": "^3.12.0"
+    "vue-template-compiler": "^2.5.21"
   }
 }
