--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
   "dependencies": {
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^8.1.0",
-    "vue": "^2.6.6"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-typescript": "^3.6.0",
-    "@vue/cli-service": "^3.5.3",
+    "@vue/cli-service": "^3.6.0",
     "electron-rebuild": "^1.8.4",
-    "electron": "^4.1.3",
+    "electron": "^4.1.4",
     "typescript": "^3.4.3",
-    "vue-cli-plugin-electron-builder": "^1.1.3",
+    "vue-cli-plugin-electron-builder": "^1.2.0",
     "vue-property-decorator": "^7.0.0",
     "vue-template-compiler": "^2.5.21"
   }
