--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gluonclient",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "electron:publish": "vue-cli-service electron:build -p always",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "rebuild": "electron-rebuild -f -w node-pty"
   },
   "main": "background.js",
   "dependencies": {
+    "electron-updater": "^4.0.6",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
@@ -22,10 +24,11 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
+    "@types/semver": "^6.0.0",
     "@vue/cli-plugin-typescript": "^3.6.0",
     "@vue/cli-service": "^3.6.0",
-    "electron-rebuild": "^1.8.4",
     "electron": "^4.1.4",
+    "electron-rebuild": "^1.8.4",
     "typescript": "^3.4.3",
     "vue-cli-plugin-electron-builder": "^1.2.0",
     "vue-property-decorator": "^7.0.0",
